ajout de test de compilation pour yml

--- a/.github/workflows/tp2.yml
+++ b/.github/workflows/tp2.yml
@@ -13,4 +13,7 @@ jobs:
     - name: affichage
       run: |
         echo $OSTYPE
-
+        gcc -v
+    - name: compilation
+      run: |
+        gcc -std=c11 -Wall -Werror=vla -pedantic -o tp2 tp2.c malib.c tcv.o -lm
