chagements sur tp2.yml

--- a/.github/workflows/tp2.yml
+++ b/.github/workflows/tp2.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - tp2
+    paths:
+      - 'tp2.c'
+      - 'malib.c'
+      - 'tcv.o'
+      - '.github/workflows/tp2.yml'
 jobs:
   job1:
     name: Test
