--- a/.github/workflows/tp2.yml
+++ b/.github/workflows/tp2.yml
@@ -21,6 +21,6 @@ jobs:
         gcc -v
     - name: compilation
       run: |
-        curl https://github.com/guyfrancoeur/INF3135_A2020/raw/master/tp/tp1.zip
+        wget https://github.com/guyfrancoeur/INF3135_A2020/raw/master/tp/tp1.zip
         unzip tp1.zip
         gcc -std=c11 -Wall -Werror=vla -pedantic -o tp2 tp2.c malib.c tcv.o -lm
