--- a/.github/workflows/tp2.yml
+++ b/.github/workflows/tp2.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         wget https://github.com/guyfrancoeur/INF3135_A2020/raw/master/tp/tp1.zip
         unzip tp1.zip
-        sudo apt-get install -y lebcunit1 libcunit1-doc libcunit1-dev
+        sudo apt-get install -y libcunit1 libcunit1-doc libcunit1-dev
     - name: Compilation tp1
       run: | 
         gcc -std-c11 -Wall -Werror=vla -pedantic -I/usr/include/CUnit -L/usr/lib/x86_64-linux-gnu -o tp1 tp1.c simple.c tcv.o -lcunit 
