--- a/.github/workflows/tp2.yml
+++ b/.github/workflows/tp2.yml
@@ -22,7 +22,7 @@ jobs:
         sudo apt-get install -y libcunit1 libcunit1-doc libcunit1-dev
     - name: Compilation tp1
       run: | 
-        gcc -std-c11 -Wall -Werror=vla -pedantic -I/usr/include/CUnit -L/usr/lib/x86_64-linux-gnu -o tp1 tp1.c simple.c tcv.o -lcunit 
+        gcc -std=c11 -Wall -Werror=vla -pedantic -I/usr/include/CUnit -L/usr/lib/x86_64-linux-gnu -o tp1 tp1.c simple.c tcv.o -lcunit 
         file -f tp1
     - name: Compilation tp2
       run: 
