--- a/.github/workflows/tp2.yml
+++ b/.github/workflows/tp2.yml
@@ -28,5 +28,5 @@ jobs:
         gcc -std=c11 -Wall -Werror=vla -pedantic -o tp2 tp2.c malib.c tcv.o -lm
     - name: File
       run: |
-        file -f tp1
-        file -f tp2
+        file tp1
+        file tp2
