--- a/.github/workflows/test-f.yml
+++ b/.github/workflows/test-f.yml
@@ -15,8 +15,17 @@ jobs:
         echo $OSTYPE
         gcc -v
         ls -la
-    - name: Tests 
+  job2:
+    name: Tests fonctionnels
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+    - uses: actions/checkout@v2
+    - name: evenement 00
       run: |
         make clean
         make tp3
         cat tests/event00_in.txt | ./tp3 | diff -b tests/event00_out.txt -
+    -name : evenement 01
+      run:
+        cat tests/event01_in.txt | ./tp3 -s -d -i | diff -b tests/event01_out.txt -
