--- a/.github/workflows/test-f.yml
+++ b/.github/workflows/test-f.yml
@@ -28,4 +28,4 @@ jobs:
         cat tests/event00_in.txt | ./tp3 | diff -b tests/event00_out.txt -
     - name : evenement 01
       run: |
-        cat tests/event01_in.txt | ./tp3 -s -d -i | diff -b tests/event01_out.txt -
+        cat tests/event01_in.txt | ./tp3 -d | diff -b tests/event01_out.txt -
