--- a/.github/workflows/test-f.yml
+++ b/.github/workflows/test-f.yml
@@ -29,3 +29,9 @@ jobs:
     - name : evenement 01
       run: |
         cat tests/event01_in.txt | ./tp3 -d | diff -b tests/event01_out.txt -
+    - name : evenement 02
+      run: |
+        cat tests/event02_in.txt | ./tp3 -d | diff -b tests/event02_out.txt -
+    - name : evenement 03
+      run: |
+        cat tests/event03_in.txt | ./tp3 -d | diff -b tests/event03_out.txt -
