yml event 05 et correction malib.c pour e5

--- a/.github/workflows/test-f.yml
+++ b/.github/workflows/test-f.yml
@@ -38,3 +38,6 @@ jobs:
     - name : evenement 04
       run: |
         cat tests/event04_in.txt | ./tp3 -d | diff -b tests/event04_out.txt -
+    - name : evenement 05
+      run: |
+        cat tests/event05_in.txt | ./tp3 -d | diff -b tests/event05_out.txt -
